[package]
name = "CoveAPI"
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/yezz123/CoveAPI"
repository = "https://github.com/yezz123/CoveAPI.git"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
regex = "1.6"
json = "0.12.4"
url = {version = "2.2.2", features = ["serde"]}
toml = "0.7.4"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
url_serde = "0.2.0"
