[package]
name = "coveapi"
version = "2.2.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/yezz123/CoveAPI"
repository = "https://github.com/yezz123/CoveAPI.git"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.5"
json = "0.12.4"
url = "2.5.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
float_eq = "1.0.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"], default-features = false }
